--- a/frontend/src/themes.scss
+++ b/frontend/src/themes.scss
@@ -2,3 +2,4 @@
 @import '~@nebular/theme/styles/theming';
 @import '~@nebular/theme/styles/themes/default';
 @import '~@nebular/theme/styles/themes/dark';
+@import '~@nebular/theme/styles/themes/cosmic';
