--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,11 +2,6 @@
   <nb-layout-header fixed><h1>InstaSaver</h1></nb-layout-header>
   <nb-sidebar>Sidebar Content</nb-sidebar>
   <nb-layout-column>
-    <nb-card>
-      <nb-card-body class="add-post">
-        <input type="text" nbInput fullWidth placeholder="Shortcode">
-        <button nbButton status="primary" style="margin-left: 1rem;">Save</button>
-      </nb-card-body>
-    </nb-card>
+    <app-create-post></app-create-post>
   </nb-layout-column>
 </nb-layout>
