--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -2,8 +2,8 @@
   <nb-layout-header fixed>
     <h1>InstaSaver</h1>
     <nb-actions>
-      <nb-action link="/archive" icon="hard-drive"></nb-action>
-      <nb-action link="/posts" icon="grid"></nb-action>
+      <nb-action link="/archive" icon="hard-drive" title="Archive"></nb-action>
+      <nb-action link="/posts" icon="grid" title="Posts"></nb-action>
       <nb-action href="https://github.com/automactic/InstaSaver" icon="github-outline"></nb-action>
     </nb-actions>
   </nb-layout-header>
