--- a/web/src/app/profiles/profiles.component.html
+++ b/web/src/app/profiles/profiles.component.html
@@ -1,1 +1,12 @@
-<p>profiles works!</p>
+<div class="profiles">
+    <div class="list">
+        <nb-card>
+            <nb-card-header>List</nb-card-header>
+        </nb-card>
+    </div>
+    <div class="detail">
+        <nb-card>
+            <nb-card-header>Detail</nb-card-header>
+        </nb-card>
+    </div>
+</div>
