--- a/web/src/app/profiles/profiles.component.html
+++ b/web/src/app/profiles/profiles.component.html
@@ -1,10 +1,10 @@
 <div class="profiles">
     <div class="list">
         <nb-card>
-            <nb-card-header>List</nb-card-header>
+            <nb-card-header>Profiles</nb-card-header>
             <nb-list>
                 <nb-list-item *ngFor="let profile of profiles">
-                    <nb-user [name]="profile.full_name" [title]="profile.username"></nb-user>
+                    <nb-user [name]="profile.full_name" [title]="profile.username" [picture]="profileImagePath(profile.username)"></nb-user>
                 </nb-list-item>
               </nb-list>
         </nb-card>
