--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,10 +1,12 @@
 <nb-layout>
   <nb-layout-header fixed>
     <fa-icon [icon]="faInstagram" size="2x"></fa-icon>
+    <nb-actions size="small">
+      <nb-action icon="archive" link="/archive" routerLinkActive="active"></nb-action>
+      <nb-action icon="grid" link="/posts" routerLinkActive="active"></nb-action>
+      <nb-action icon="person" link="/profiles" routerLinkActive="active"></nb-action>
+    </nb-actions>
   </nb-layout-header>
-  <nb-sidebar responsive start>
-    <nb-menu [items]="menuItems"></nb-menu>
-  </nb-sidebar>
   <nb-layout-column>
     <router-outlet></router-outlet>
   </nb-layout-column>
