--- a/web/src/app/profiles/profiles.component.html
+++ b/web/src/app/profiles/profiles.component.html
@@ -10,7 +10,7 @@
         </nb-card>
     </div>
     <div class="detail">
-        <nb-card>
+        <nb-card size="medium">
             <nb-card-header>Detail</nb-card-header>
         </nb-card>
     </div>
