--- a/web/src/app/profiles/profiles.component.scss
+++ b/web/src/app/profiles/profiles.component.scss
@@ -1,7 +1,7 @@
 div.profiles {
     display: flex;
     height: 100%;
-    @media (max-width: 991.98px) {
+    @media (max-width: 767.98px) {
         flex-direction: column;
     }
 }
@@ -9,21 +9,12 @@ div.profiles > div.list {
     flex: 3;
     margin-right: 2rem;
     @media (max-width: 991.98px) {
-        margin-right: 0;
+        margin-right: 1rem;
     }
-    nb-card {
-        height: 100%;
+    @media (max-width: 767.98px) {
+        margin-right: 0;
     }
 }
 div.profiles > div.detail {
     flex: 7;
-    nb-card {
-        height: 100%;
-    }
-    div.post {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        > div.info { margin: 0 0.5rem; }
-    }
 }
