--- a/web/src/app/profiles/profiles.component.scss
+++ b/web/src/app/profiles/profiles.component.scss
@@ -1,9 +1,9 @@
 div.profiles {
     display: flex;
-    height: 100%;
-    @media (max-width: 767.98px) {
-        flex-direction: column;
-    }
+    @media (max-width: 767.98px) { flex-direction: column }
+
+    height: calc(100vh - 9rem);
+    @media (max-width: 991.98px) { height: calc(100vh - 7.5rem) }
 }
 div.profiles > div.list {
     flex: 3;
@@ -14,6 +14,7 @@ div.profiles > div.list {
     @media (max-width: 767.98px) { margin-right: 0 }
     
     nb-card {
+        max-height: 100%;
         @media (max-width: 767.98px) { max-height: 30rem; }
     }
 }
