--- a/web/src/app/profiles/profiles.component.html
+++ b/web/src/app/profiles/profiles.component.html
@@ -14,8 +14,6 @@
     </nb-card>
   </div>
   <div class="detail">
-    <nb-card>
-      <nb-card-header>Detail</nb-card-header>
-    </nb-card>
+    <router-outlet></router-outlet>
   </div>
 </div>
