nb-list-item color

--- a/web/src/app/profiles/profiles.component.html
+++ b/web/src/app/profiles/profiles.component.html
@@ -3,7 +3,10 @@
     <nb-card>
       <nb-card-header>Profiles</nb-card-header>
       <nb-list>
-        <nb-list-item *ngFor="let profile of profiles" [routerLink]="profile.username" routerLinkActive="active">
+        <nb-list-item 
+          *ngFor="let profile of profiles" 
+          [routerLink]="profile.username" 
+          routerLinkActive="active">
           <nb-user 
             [name]="profile.full_name" 
             [title]="profile.username" 
