--- a/web/src/app/profiles/profiles.component.scss
+++ b/web/src/app/profiles/profiles.component.scss
@@ -1,14 +1,19 @@
 div.profiles {
   display: flex;
   @media (max-width: 767.98px) { flex-direction: column }
-
-  height: calc(100vh - 9rem);
-  @media (max-width: 991.98px) { height: calc(100vh - 7.5rem) }
-  @media (max-width: 767.98px) { height: auto }
 }
 div.profiles > div.list {
   flex: 3;
   @media (max-width: 767.98px) { flex: none; }
+
+  position: -webkit-sticky;
+  position: sticky;
+  top: 6.25rem;
+  @media (max-width: 767.98px) { position: static }
+
+  height: calc(100vh - 8.75rem);
+  @media (max-width: 991.98px) { height: calc(100vh - 7.25rem) }
+  @media (max-width: 767.98px) { height: auto }
 
   margin-right: 2rem;
   @media (max-width: 991.98px) { margin-right: 1rem }
