--- a/web/src/app/profiles/profiles.component.scss
+++ b/web/src/app/profiles/profiles.component.scss
@@ -1,20 +1,30 @@
 div.profiles {
-    display: flex;
-    height: 100%;
-    @media (max-width: 767.98px) {
-        flex-direction: column;
-    }
+  display: flex;
+  @media (max-width: 767.98px) { flex-direction: column }
 }
 div.profiles > div.list {
-    flex: 3;
-    margin-right: 2rem;
-    @media (max-width: 991.98px) {
-        margin-right: 1rem;
-    }
-    @media (max-width: 767.98px) {
-        margin-right: 0;
-    }
+  flex: 3;
+  @media (max-width: 767.98px) { flex: none; }
+
+  position: -webkit-sticky;
+  position: sticky;
+  top: 6.25rem;
+  @media (max-width: 767.98px) { position: static }
+
+  height: calc(100vh - 8.75rem);
+  @media (max-width: 991.98px) { height: calc(100vh - 7.25rem) }
+  @media (max-width: 767.98px) { height: auto }
+
+  margin-right: 2rem;
+  @media (max-width: 991.98px) { margin-right: 1rem }
+  @media (max-width: 767.98px) { margin-right: 0 }
+  
+  nb-card {
+    max-height: 100%;
+    @media (max-width: 767.98px) { max-height: 30rem; }
+  }
 }
 div.profiles > div.detail {
-    flex: 7;
+  flex: 7;
+  @media (max-width: 767.98px) { flex: none; }
 }
