--- a/web/src/app/profiles/profiles.component.html
+++ b/web/src/app/profiles/profiles.component.html
@@ -8,7 +8,7 @@
           [routerLink]="profile.username" 
           routerLinkActive="active">
           <nb-user 
-            [name]="profile.full_name" 
+            [name]="profile.display_name" 
             [title]="profile.username" 
             [picture]="profileImagePath(profile.image_filename)"
             shape="rectangle">
