--- a/web/src/app/profile-detail/profile-detail.component.scss
+++ b/web/src/app/profile-detail/profile-detail.component.scss
@@ -1,7 +1,7 @@
 nb-card-body {
   div.profile > div.row {
     display: flex;
-    p.title { flex: 2 }
+    p.title { flex: 2; margin-right: 1rem;}
     p.detail { flex: 8 }
     p {margin: 0.5rem 0;}
   }
