--- a/web/src/app/posts/posts.component.html
+++ b/web/src/app/posts/posts.component.html
@@ -1,1 +1,8 @@
-<p>posts works!</p>
+<nb-card>
+  <nb-card-header>
+    <nb-select placeholder="All" size="medium">
+      <nb-option>All</nb-option>
+      <nb-option *ngFor="let profile of profileService.profiles" [value]="profile.username">{{ profile.display_name }}</nb-option>
+    </nb-select>
+  </nb-card-header>
+</nb-card>
