--- a/web/src/app/profiles/profiles.component.scss
+++ b/web/src/app/profiles/profiles.component.scss
@@ -6,19 +6,20 @@ div.profiles > div.list {
   flex: 3;
   @media (max-width: 767.98px) { flex: none; }
 
+  margin-right: 2rem;
+  @media (max-width: 991.98px) { margin-right: 1rem }
+  @media (max-width: 767.98px) { margin-right: 0 }
+
   position: -webkit-sticky;
   position: sticky;
-  top: 6.25rem;
+  top: 7rem;
+  @media (max-width: 991.98px) { top: 6.25rem; }
   @media (max-width: 767.98px) { position: static }
 
   height: calc(100vh - 8.75rem);
   @media (max-width: 991.98px) { height: calc(100vh - 7.25rem) }
   @media (max-width: 767.98px) { height: auto }
 
-  margin-right: 2rem;
-  @media (max-width: 991.98px) { margin-right: 1rem }
-  @media (max-width: 767.98px) { margin-right: 0 }
-  
   nb-card {
     max-height: 100%;
     @media (max-width: 767.98px) { max-height: 30rem; }
