a list of posts

--- a/web/src/app/posts/posts.component.html
+++ b/web/src/app/posts/posts.component.html
@@ -7,6 +7,14 @@
           <nb-option *ngFor="let profile of profileService.profiles" [value]="profile.username">{{ profile.display_name }}</nb-option>
         </nb-select>
       </nb-card-header>
+      <div>
+        <div *ngFor="let post of posts">
+          <div *ngIf="post.first_item as first_item">
+            <img *ngIf="first_item.type == 'image'" [src]="postService.getMediaPath(post.owner_username, first_item.filename)">
+            <!-- <video *ngIf="first_item.type == 'video'" [src]="postService.getMediaPath(post.owner_username, first_item.filename)" type="video/mp4"></video> -->
+          </div>
+        </div>
+      </div>
     </nb-card>
   </div>
   <div class="detail">
