--- a/web/src/app/posts/posts.component.html
+++ b/web/src/app/posts/posts.component.html
@@ -14,7 +14,13 @@
     <nb-card>
       <nb-list nbInfiniteList [threshold]="500" (bottomThreshold)="loadNext()">
         <nb-list-item *ngFor="let post of posts">
-          <div><p>{{post.shortcode}}</p></div>
+          <div class="header">
+            <div>
+              <div><b>{{ post.owner_username }}</b></div>
+              <div>{{ post.creation_time }}</div>
+            </div>
+            <button nbButton status="basic">Delete</button>
+          </div>
           <div *ngIf="post.first_item as first_item">
             <img *ngIf="post.first_item?.type == 'image'" [src]="postService.getMediaPath(post.owner_username, first_item.filename)">
           </div>
