--- a/web/src/app/posts/posts.component.scss
+++ b/web/src/app/posts/posts.component.scss
@@ -12,6 +12,13 @@ div.container > div.posts {
   nb-list-item {
     padding: 0;
     flex-direction: column;
+    div.header {
+      width: 100%;
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items:center;
+    }
     img {
       max-width: 100%;
     }
